--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "file-loader": "^4.2.0",
     "google-fonts-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^2.1.3",
     "url-loader": "^2.2.0",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-dev-server": "^3.8.2",
+    "workbox-webpack-plugin": "^4.3.1"
   }
 }
